<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:background="@color/colorPrimaryDark"/>

    <ListView
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/textView3">

    </ListView>

    <TextView
        android:id="@+id/sum_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/sum_total"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignStart="@+id/sum_total"
        android:layout_marginTop="54dp"
        android:text="@string/sum"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/sum_total" />

    <TextView
        android:id="@+id/display_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignStart="@+id/sum_total"
        android:layout_marginTop="84dp"
        android:text="@string/tax"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/sum_total" />

    <TextView
        android:id="@+id/display_tax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignStart="@+id/display_sum"
        android:layout_marginStart="0dp"
        android:layout_marginTop="87dp"
        android:text="0.00"
        android:textSize="16sp"
        android:layout_alignLeft="@+id/display_sum"
        android:layout_marginLeft="0dp" />

    <Button
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/list_items"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="51dp"
        android:layout_marginRight="51dp"
        android:background="#FF6600"
        android:text="@string/checkout" />

    <Button
        android:id="@+id/continue_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_shopping"
        android:layout_below="@+id/list_items"/>


</RelativeLayout>